--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -11,6 +11,7 @@
 	xmlns:interactivity="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
 	xmlns:models="clr-namespace:Models.Collections;assembly=Models"
 	xmlns:controls="clr-namespace:Client_App.Controls"
+	xmlns:tabs="clr-namespace:Client_App.Views.MainWindowTabs"
     Title="{Binding Current_Db, Mode=OneWay}"
     d:DesignHeight="600"
     d:DesignWidth="800"
@@ -452,293 +453,11 @@
                     </Panel>
                 </TabItem>
 				<TabItem x:Name="Forms3" Header="Формы 3" IsVisible="False"/>
-				<!--Формы 4-->
-				<TabItem x:Name="Forms4" Header="Формы 4">
-					<Border Classes="borderContainer">
-						<Grid RowDefinitions="*,*" ColumnDefinitions="5*,3*" >
-							<Grid Grid.Row ="0" Grid.Column="0" RowDefinitions="Auto,*,Auto">
-								<TextBox Text="{Binding SearchText}" Grid.Row="0" Margin="5" Watermark ="Поиск..." />
-								<!--Ошибка в этом DataGrid-->
-								<DataGrid 
-									      Grid.Row="1" Margin="5"
-					                      x:CompileBindings="True"
-									      Items="{Binding ReportsCollection}"
-										  SelectionMode="Single"
-										  SelectedItem="{Binding SelectedReports}"
-										  RowHeight="25"
-										  GridLinesVisibility="All"
-										  AlternatingRowBackground="White"
-										  RowBackground="White">
-										
-							        <DataGrid.ContextMenu>
-										<ContextMenu>
-											<MenuItem Header="Добавить форму"
-													  Command="{Binding AddReports}"/>
-											<MenuItem Header="Редактировать форму"
-													  Command="{Binding NewChangeReports}"/>
-											<MenuItem Header="Удалить форму"
-													  Command="{Binding DeleteReports}"
-													  CommandParameter="{Binding SelectedReports}"/>
-											<MenuItem Header="Выгрузить организацию"
-													  Command="{Binding ExportReports}"
-													  CommandParameter="{Binding SelectedReports}"/>
-											<MenuItem Header="Выгрузить организацию с указанием диапазона дат"
-													  Command="{Binding ExportReportsWithDateRange}"
-													  CommandParameter="{Binding SelectedReports}"/>
-											<MenuItem Header="Выгрузить все организации в один файл"
-													  Command="{Binding ExportAllReportsOneFile}"/>
-											<MenuItem Header="Выгрузить все организации в отдельные файлы"
-													  Command="{Binding ExportAllReports}"
-													  CommandParameter="{Binding SelectedReports}"/>
-										</ContextMenu>
-									</DataGrid.ContextMenu>
-										
-									<DataGrid.Columns>
-										<DataGridTextColumn
-											x:DataType="models:Reports"
-											Width="60"
-											IsReadOnly="True"
-											Binding="{Binding Master.Rows40[0].CodeSubjectRF.Value}">
-											<DataGridTextColumn.HeaderTemplate>
-												<DataTemplate>
-													<Border Classes="headerTemplate">
-														<Grid ColumnDefinitions="*,Auto" Margin="3">
-															<TextBlock Grid.Column="0" Text="Код субъекта РФ"/>
-															<!--<Button Grid.Column="1"/>-->
-														</Grid>
-													</Border>
-												</DataTemplate>
-											</DataGridTextColumn.HeaderTemplate>
-										</DataGridTextColumn>
-										
-										<DataGridTextColumn 
-											x:DataType="models:Reports"
-											Width="Auto"
-											IsReadOnly="True"
-											Binding="{Binding Master.Rows40[0].SubjectRF.Value}">
-											<DataGridTextColumn.HeaderTemplate>
-												<DataTemplate>
-													<Border Classes="headerTemplate">
-														<Grid ColumnDefinitions="*,Auto" Margin="3">
-															<TextBlock Grid.Column="0" Text="Субъект РФ"/>
-															<!--<Button Grid.Column="1"/>-->
-														</Grid>
-													</Border>
-												</DataTemplate>
-											</DataGridTextColumn.HeaderTemplate>
-										</DataGridTextColumn>
-
-										<DataGridTemplateColumn Width="*" IsReadOnly="True">
-											<DataGridTemplateColumn.HeaderTemplate>
-												<DataTemplate>
-													<Border Classes="headerTemplate">
-														<Grid ColumnDefinitions="*,Auto" Margin="3">
-															<TextBlock Grid.Column="0" Text="Сокращенное наименование РИАЦ"/>
-															<!--<Button Grid.Column="1"/>-->
-														</Grid>
-													</Border>
-												</DataTemplate>
-											</DataGridTemplateColumn.HeaderTemplate>
-											<DataGridTemplateColumn.CellTemplate>
-												<DataTemplate x:DataType="models:Reports">
-													<TextBlock Margin="5">
-														<TextBlock.Text>
-															<MultiBinding Converter="{StaticResource IfNullShowAnotherValue}">
-																<Binding Path="Master.Rows40[0].ShortNameRiac.Value"/>
-																<Binding Path="Master.Rows40[0].NameRiac.Value"/>
-															</MultiBinding>
-														</TextBlock.Text>
-													</TextBlock>
-												</DataTemplate>
-											</DataGridTemplateColumn.CellTemplate>
-										</DataGridTemplateColumn>
-
-								    </DataGrid.Columns>
-								</DataGrid>
-								<Border Grid.Row="2" Classes="pageControlContainer">
-									<Grid
-										  RowDefinitions="Auto,Auto"
-										  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
-										<TextBlock Text="Текущая страница"
-											Grid.Row="0" Grid.Column="0" Margin="5"/>
-
-										<controls:NumericLeftRight
-											Value="{Binding CurrentPageOrgs}"
-											Grid.Row="0" Grid.Column="1" Margin="5"
-											Minimum="1"/>
-										<TextBlock Text ="Кол-во страниц:"
-											Grid.Row="0" Grid.Column="2" Margin="5"/>
-										<TextBlock 
-											Text="{Binding TotalPagesOrgs}"
-											Grid.Row="0" Grid.Column="3" Margin="5"/>
-										<TextBlock Text="Кол-во строчек на странице"
-											Grid.Row="1" Grid.Column="0" Margin="5"/>
-										<controls:NumericLeftRight
-											Value="{Binding RowsCountOrgs}"
-											Grid.Row="1" Grid.Column="1" Margin="5"
-											Minimum="1"/>
-										<TextBlock Text="Кол-во строчек:"
-											Grid.Row="1" Grid.Column="2" Margin="5"/>
-										<TextBlock
-											Text="{Binding TotalRowsOrgs}"
-											Grid.Row="1" Grid.Column="3" Margin="5"/>
-
-										<TextBlock Text="Кол-во отчетов:"
-											Grid.Row="1" Grid.Column="4" Margin="5"/>
-										<TextBlock Text="{Binding TotalForms}"
-											Grid.Row="1" Grid.Column="5" Margin="5"/>
-									</Grid>
-								</Border>
-							</Grid>
-							<StackPanel Grid.Row ="0" Grid.Column="1" Margin="5">
-							    <Button Command="{Binding NewAddForm}"
-										CommandParameter="4.1"
-										Content="Форма 4.1"></Button>
-							</StackPanel>
-							<Grid Grid.Row ="1" Grid.Column="0" Grid.ColumnSpan="2" RowDefinitions="*,Auto" >
-								<DataGrid Grid.Row="0" Margin="5"
-										  Items="{Binding ReportCollection}"
-										  SelectedItem="{Binding SelectedReport}"
-										  RowHeight="25"
-										  GridLinesVisibility="All"
-										  AlternatingRowBackground="White"
-										  RowBackground="White">
-									<DataGrid.ContextMenu>
-										<ContextMenu>
-											<MenuItem Header="Редактировать форму"
-													  Command="{Binding NewChangeForm}"
-													  CommandParameter="{Binding SelectedReport}"/>
-											<MenuItem Header="Удалить форму"
-													  Command="{Binding NewDeleteForm}"
-													  CommandParameter="{Binding SelectedReport}"/>
-											<MenuItem Header="Выгрузить форму в Excel"
-													  Command="{Binding ExcelExportFormPrint}"
-                                                      CommandParameter="{Binding SelectedReport}"/>
-											<MenuItem Header="Выгрузить"
-													  Command="{Binding ExportForm}"
-                                                      CommandParameter="{Binding SelectedReport}"/>
-										</ContextMenu>
-									</DataGrid.ContextMenu>
-
-									<DataGrid.Columns>
-										<DataGridTextColumn
-											    x:DataType="models:Report"
-											    Width="*"
-											    IsReadOnly="True"
-												Binding="{Binding FormNum.Value}">
-										    <DataGridTextColumn.HeaderTemplate>
-											    <DataTemplate>
-												    <Border Classes="headerTemplate">
-													    <Grid ColumnDefinitions="*,Auto" Margin="3">
-														    <TextBlock Grid.Column="0" Text="Форма"/>
-														    <!--<Button Grid.Column="1"/>-->
-													    </Grid>
-												    </Border>
-											    </DataTemplate>
-										    </DataGridTextColumn.HeaderTemplate>
-									    </DataGridTextColumn>
-										<DataGridTextColumn
-											    x:DataType="models:Report"
-											    Width="*"
-											    IsReadOnly="True"
-												Binding="{Binding Year.Value}">
-										    <DataGridTextColumn.HeaderTemplate>
-											    <DataTemplate>
-												    <Border Classes="headerTemplate">
-													    <Grid ColumnDefinitions="*,Auto" Margin="3">
-														    <TextBlock Grid.Column="0" Text="Год"/>
-														    <!--<Button Grid.Column="1"/>-->
-													    </Grid>
-												    </Border>
-											    </DataTemplate>
-										    </DataGridTextColumn.HeaderTemplate>
-									    </DataGridTextColumn>
-										<DataGridTextColumn
-											    x:DataType="models:Report"
-											    Width="2*"
-											    IsReadOnly="True"
-												Binding="{Binding ExportDate.Value}">
-										    <DataGridTextColumn.HeaderTemplate>
-											    <DataTemplate>
-												    <Border Classes="headerTemplate">
-													    <Grid ColumnDefinitions="*,Auto" Margin="3">
-														    <TextBlock Grid.Column="0" Text="Дата выгрузки"/>
-														    <!--<Button Grid.Column="1"/>-->
-													    </Grid>
-												    </Border>
-											    </DataTemplate>
-										    </DataGridTextColumn.HeaderTemplate>
-									    </DataGridTextColumn>
-										<DataGridTextColumn
-											    x:DataType="models:Report"
-											    Width="2*"
-											    IsReadOnly="True"
-												Binding="{Binding CorrectionNumber.Value}">
-										    <DataGridTextColumn.HeaderTemplate>
-											    <DataTemplate>
-												    <Border Classes="headerTemplate">
-													    <Grid ColumnDefinitions="*,Auto" Margin="3">
-														    <TextBlock Grid.Column="0" Text="Номер корректировки"/>
-														    <!--<Button Grid.Column="1"/>-->
-													    </Grid>
-												    </Border>
-											    </DataTemplate>
-										    </DataGridTextColumn.HeaderTemplate>
-									    </DataGridTextColumn>
-										<DataGridTextColumn
-											    x:DataType="models:Report"
-											    Width="4*"
-											    IsReadOnly="False"
-												Binding="{Binding Comments.Value}">
-										    <DataGridTextColumn.HeaderTemplate>
-											    <DataTemplate>
-												    <Border Classes="headerTemplate">
-													    <Grid ColumnDefinitions="*,Auto" Margin="3">
-														    <TextBlock Grid.Column="0" Text="Комментарий"/>
-														    <!--<Button Grid.Column="1"/>-->
-													    </Grid>
-												    </Border>
-											    </DataTemplate>
-										    </DataGridTextColumn.HeaderTemplate>
-									    </DataGridTextColumn>
-									</DataGrid.Columns>
-								</DataGrid>
-								<Border Grid.Row="1" Classes="pageControlContainer">
-									<Grid
-										  RowDefinitions="Auto,Auto"
-										  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
-										<TextBlock Text="Текущая страница"
-											Grid.Row="0" Grid.Column="0" Margin="5"/>
-
-										<controls:NumericLeftRight 
-											Value="{Binding CurrentPageForms}"
-											Grid.Row="0" Grid.Column="1" Margin="5"
-											Minimum="1"/>
-										<TextBlock Text ="Кол-во страниц:"
-											Grid.Row="0" Grid.Column="2" Margin="5"/>
-										<TextBlock Text="{Binding TotalPagesForms}"
-											Grid.Row="0" Grid.Column="3" Margin="5"/>
-										<TextBlock Text="Кол-во строчек на странице"
-											Grid.Row="1" Grid.Column="0" Margin="5"/>
-										<controls:NumericLeftRight
-											Value="{Binding RowsCountForms}"
-											Grid.Row="1" Grid.Column="1" Margin="5"
-											Minimum="1"/>
-										<TextBlock Text="Кол-во отчетов:"
-											Grid.Row="1" Grid.Column="2" Margin="5"/>
-										<TextBlock Text="{Binding TotalRowsForms}"
-											Grid.Row="1" Grid.Column="3" Margin="5"/>
-
-										<TextBlock Text="Кол-во строчек:"
-											Grid.Row="1" Grid.Column="4" Margin="5"/>
-										<TextBlock Text="{Binding NumFormInReport}"
-											Grid.Row="1" Grid.Column="5" Margin="5"/>
-									</Grid>
-								</Border>
-							</Grid>
-						</Grid>
-					</Border>
-				</TabItem>
+				<TabItem x:Name="Forms4" Header="Формы 4" >
+					<tabs:Forms4TabControl DataContext="{Binding Forms4TabControlVM}">
+						
+					</tabs:Forms4TabControl>
+			    </TabItem>
             </TabControl>
         </Panel>
 
