--- a/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
@@ -47,7 +47,10 @@
 							<MenuItem Header="Выгрузить все организации в один файл"
 									  Command="{Binding MainWindowVM.ExportAllReportsOneFile}"/>
 							<MenuItem Header="Выгрузить все организации в отдельные файлы"
-									  Command="{Binding ExportAllReports}"
+									  Command="{Binding MainWindowVM.ExportAllReports}"
+									  CommandParameter="{Binding MainWindowVM.SelectedReports}"/>
+							<MenuItem Header="Проверить все формы организации"
+									  Command="{Binding MainWindowVM.ExcelExportCheckAllForms}"
 									  CommandParameter="{Binding MainWindowVM.SelectedReports}"/>
 						</ContextMenu>
 					</DataGrid.ContextMenu>
@@ -72,9 +75,9 @@
 
 						<DataGridTextColumn
 							x:DataType="models:Reports"
-							Width="Auto"
+							Width="*"
 							IsReadOnly="True"
-							Binding="{Binding Master.Rows10[0].ShortNameJurLico.Value}">
+							Binding="{Binding Master.Rows10[0].ShortJurLico.Value}">
 							<DataGridTextColumn.HeaderTemplate>
 								<DataTemplate>
 									<Border Classes="headerTemplate">
@@ -89,7 +92,7 @@
 
 						<DataGridTextColumn
 							x:DataType="models:Reports"
-							Width="Auto"
+							Width="80"
 							IsReadOnly="True"
 							Binding="{Binding Master.Rows10[0].Okpo.Value}">
 							<DataGridTextColumn.HeaderTemplate>
@@ -141,35 +144,47 @@
 					</Grid>
 				</Border>
 			</Grid>
-			<StackPanel Grid.Row ="0" Grid.Column="1" Margin="5">
-				<Button Command="{Binding MainWindowVM.NewAddForm}"
-						CommandParameter="1.1"
-						Content="Форма 1.1: Сведения о ЗРИ"></Button>
-				<Button Command="{Binding MainWindowVM.NewAddForm}"
-						CommandParameter="1.2"
-						Content="Форма 1.2: Сведения об изделиях из обедненного урана"></Button>
-				<Button Command="{Binding MainWindowVM.NewAddForm}"
-						CommandParameter="1.3"
-						Content="Форма 1.3: Сведения об ОРИ в виде отдельных изделий"></Button>
-				<Button Command="{Binding MainWindowVM.NewAddForm}"
-						CommandParameter="1.4"
-						Content="Форма 1.4: Сведения об ОРИ кроме отдельных изделий"></Button>
-				<Button Command="{Binding MainWindowVM.NewAddForm}"
-						CommandParameter="1.5"
-						Content="Форма 1.5: Сведения о РАО в виде отработавших ЗРИ"></Button>
-				<Button Command="{Binding MainWindowVM.NewAddForm}"
-						CommandParameter="1.6"
-						Content="Форма 1.6: Сведения о некондиционированных РАО"></Button>
-				<Button Command="{Binding MainWindowVM.NewAddForm}"
-						CommandParameter="1.7"
-						Content="Форма 1.7: Сведения о твердых кондиционированных РАО"></Button>
-				<Button Command="{Binding MainWindowVM.NewAddForm}"
-						CommandParameter="1.8"
-						Content="Форма 1.8: Сведения о жидких кондиционированных РАО"></Button>
-				<Button Command="{Binding MainWindowVM.NewAddForm}"
-						CommandParameter="1.9"
-						Content="Форма 1.9: Сведения о результатах инвентаризации РВ не в составе ЗРИ"></Button>
-			</StackPanel>
+			<ScrollViewer Grid.Row ="0" Grid.Column="1" Margin="5">
+				<StackPanel>
+				
+					<Button Margin="0,0,0,5" 
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="1.1"
+							Content="Форма 1.1: Сведения о ЗРИ"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="1.2"
+							Content="Форма 1.2: Сведения об изделиях из обедненного урана"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="1.3"
+							Content="Форма 1.3: Сведения об ОРИ в виде отдельных изделий"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="1.4"
+							Content="Форма 1.4: Сведения об ОРИ кроме отдельных изделий"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="1.5"
+							Content="Форма 1.5: Сведения о РАО в виде отработавших ЗРИ"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="1.6"
+							Content="Форма 1.6: Сведения о некондиционированных РАО"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="1.7"
+							Content="Форма 1.7: Сведения о твердых кондиционированных РАО"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="1.8"
+							Content="Форма 1.8: Сведения о жидких кондиционированных РАО"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="1.9"
+							Content="Форма 1.9: Сведения о результатах инвентаризации РВ не в составе ЗРИ"></Button>
+				</StackPanel>
+			</ScrollViewer>
 			<Grid Grid.Row ="1" Grid.Column="0" Grid.ColumnSpan="2" RowDefinitions="*,Auto" >
 				<DataGrid Grid.Row="0" Margin="5"
 						  Items="{Binding ReportCollection}"
@@ -191,6 +206,12 @@
 									  CommandParameter="{Binding SelectedReport}"/>
 							<MenuItem Header="Выгрузить"
 									  Command="{Binding MainWindowVM.ExportForm}"
+									  CommandParameter="{Binding SelectedReport}"/>
+							<MenuItem Header="Проверить форму"
+									  Command="{Binding MainWindowVM.CheckFormFromMain}"
+									  CommandParameter="{Binding SelectedReport}"/>
+							<MenuItem Header="Сохранить комментарий"
+									  Command="{Binding MainWindowVM.SaveReports}"
 									  CommandParameter="{Binding SelectedReport}"/>
 						</ContextMenu>
 					</DataGrid.ContextMenu>
@@ -221,7 +242,7 @@
 								<DataTemplate>
 									<Border Classes="headerTemplate">
 										<Grid ColumnDefinitions="*,Auto" Margin="3">
-											<TextBlock Grid.Column="0" Text="Год"/>
+											<TextBlock Grid.Column="0" Text="Дата начала периода"/>
 											<!--<Button Grid.Column="1"/>-->
 										</Grid>
 									</Border>
@@ -237,7 +258,7 @@
 								<DataTemplate>
 									<Border Classes="headerTemplate">
 										<Grid ColumnDefinitions="*,Auto" Margin="3">
-											<TextBlock Grid.Column="0" Text="Год"/>
+											<TextBlock Grid.Column="0" Text="Дата конца периода"/>
 											<!--<Button Grid.Column="1"/>-->
 										</Grid>
 									</Border>
@@ -246,7 +267,7 @@
 						</DataGridTextColumn>
 						<DataGridTextColumn
 								x:DataType="models:Report"
-								Width="2*"
+								Width="*"
 								IsReadOnly="True"
 								Binding="{Binding ExportDate.Value}">
 							<DataGridTextColumn.HeaderTemplate>
@@ -262,7 +283,7 @@
 						</DataGridTextColumn>
 						<DataGridTextColumn
 								x:DataType="models:Report"
-								Width="2*"
+								Width="*"
 								IsReadOnly="True"
 								Binding="{Binding CorrectionNumber.Value}">
 							<DataGridTextColumn.HeaderTemplate>
