--- a/Client_App/Views/MainWindowTabs/Forms2TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms2TabControl.axaml
@@ -7,8 +7,8 @@
 	         xmlns:models="clr-namespace:Models.Collections;assembly=Models"
 			 xmlns:converter="clr-namespace:Client_App.VisualRealization.Converters"
 			 xmlns:vm="using:Client_App.ViewModels.MainWindowTabs"
-			 x:DataType="vm:Forms1TabControlVM"
-             x:Class="Client_App.Views.MainWindowTabs.Forms1TabControl">
+			 x:DataType="vm:Forms2TabControlVM"
+             x:Class="Client_App.Views.MainWindowTabs.Forms2TabControl">
 
 	<UserControl.Resources>
 		<converter:IfNullShowAnotherValue x:Key="IfNullShowAnotherValue"/>
@@ -60,7 +60,7 @@
 							x:DataType="models:Reports"
 							Width="60"
 							IsReadOnly="True"
-							Binding="{Binding Master.Rows10[0].RegNo.Value}">
+							Binding="{Binding Master.Rows20[0].RegNo.Value}">
 							<DataGridTextColumn.HeaderTemplate>
 								<DataTemplate>
 									<Border Classes="headerTemplate">
@@ -77,7 +77,7 @@
 							x:DataType="models:Reports"
 							Width="*"
 							IsReadOnly="True"
-							Binding="{Binding Master.Rows10[0].ShortJurLico.Value}">
+							Binding="{Binding Master.Rows20[0].ShortJurLico.Value}">
 							<DataGridTextColumn.HeaderTemplate>
 								<DataTemplate>
 									<Border Classes="headerTemplate">
@@ -94,7 +94,7 @@
 							x:DataType="models:Reports"
 							Width="80"
 							IsReadOnly="True"
-							Binding="{Binding Master.Rows10[0].Okpo.Value}">
+							Binding="{Binding Master.Rows20[0].Okpo.Value}">
 							<DataGridTextColumn.HeaderTemplate>
 								<DataTemplate>
 									<Border Classes="headerTemplate">
@@ -149,40 +149,52 @@
 				
 					<Button Margin="0,0,0,5" 
 							Command="{Binding MainWindowVM.NewAddForm}"
-							CommandParameter="1.1"
-							Content="Форма 1.1: Сведения о ЗРИ"></Button>
+							CommandParameter="2.1"
+							Content="Форма 2.1: Сортировка, переработка и кондиционирование РАО на установках"></Button>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
-							CommandParameter="1.2"
-							Content="Форма 1.2: Сведения об изделиях из обедненного урана"></Button>
+							CommandParameter="2.2"
+							Content="Форма 2.2: Наличие РАО в пунктах хранения, местах сбора и/или временного хранения"></Button>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
-							CommandParameter="1.3"
-							Content="Форма 1.3: Сведения об ОРИ в виде отдельных изделий"></Button>
+							CommandParameter="2.3"
+							Content="Форма 2.3: Разрешение на размещенеие РАО в пунктах хранения, местах сбора и/или временного хранения"></Button>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
-							CommandParameter="1.4"
-							Content="Форма 1.4: Сведения об ОРИ кроме отдельных изделий"></Button>
+							CommandParameter="2.4"
+							Content="Форма 2.4: Постановка на учет и снятие с учета РВ, содержащихся в отработавшем ядерном топливе"></Button>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
-							CommandParameter="1.5"
-							Content="Форма 1.5: Сведения о РАО в виде отработавших ЗРИ"></Button>
+							CommandParameter="2.5"
+							Content="Форма 2.5: Наличие РВ, содержащихся в ядерном топливе, в пунктах хранения"></Button>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
-							CommandParameter="1.6"
-							Content="Форма 1.6: Сведения о некондиционированных РАО"></Button>
+							CommandParameter="2.6"
+							Content="Форма 2.6: Контроль загрязнения подземных вод РВ"></Button>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
-							CommandParameter="1.7"
-							Content="Форма 1.7: Сведения о твердых кондиционированных РАО"></Button>
+							CommandParameter="2.7"
+							Content="Форма 2.7: Поступление радионуклидов в атмосферный воздух"></Button>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
-							CommandParameter="1.8"
-							Content="Форма 1.8: Сведения о жидких кондиционированных РАО"></Button>
+							CommandParameter="2.8"
+							Content="Форма 2.8: Отведение сточных вод, содержащих радионуклиды"></Button>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
-							CommandParameter="1.9"
-							Content="Форма 1.9: Сведения о результатах инвентаризации РВ не в составе ЗРИ"></Button>
+							CommandParameter="2.9"
+							Content="Форма 2.9: Активность радионуклидов, отведенных со сточными водами"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="2.10"
+							Content="Форма 2.10: Территории, загрязненные радионуклидами"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="2.11"
+							Content="Форма 2.11: Радионуклидный состав загрязненных участков территорий"></Button>
+					<Button Margin="0,0,0,5"
+							Command="{Binding MainWindowVM.NewAddForm}"
+							CommandParameter="2.12"
+							Content="Форма 2.12: Суммарные сведения о РВ не в составе ЗРИ"></Button>
 				</StackPanel>
 			</ScrollViewer>
 			<Grid Grid.Row ="1" Grid.Column="0" Grid.ColumnSpan="2" RowDefinitions="*,Auto" >
@@ -237,28 +249,12 @@
 								x:DataType="models:Report"
 								Width="*"
 								IsReadOnly="True"
-								Binding="{Binding StartPeriod.Value}">
+								Binding="{Binding Year.Value}">
 							<DataGridTextColumn.HeaderTemplate>
 								<DataTemplate>
 									<Border Classes="headerTemplate">
 										<Grid ColumnDefinitions="*,Auto" Margin="3">
-											<TextBlock Grid.Column="0" Text="Дата начала периода"/>
-											<!--<Button Grid.Column="1"/>-->
-										</Grid>
-									</Border>
-								</DataTemplate>
-							</DataGridTextColumn.HeaderTemplate>
-						</DataGridTextColumn>
-						<DataGridTextColumn
-								x:DataType="models:Report"
-								Width="*"
-								IsReadOnly="True"
-								Binding="{Binding EndPeriod.Value}">
-							<DataGridTextColumn.HeaderTemplate>
-								<DataTemplate>
-									<Border Classes="headerTemplate">
-										<Grid ColumnDefinitions="*,Auto" Margin="3">
-											<TextBlock Grid.Column="0" Text="Дата конца периода"/>
+											<TextBlock Grid.Column="0" Text="Отчетный год"/>
 											<!--<Button Grid.Column="1"/>-->
 										</Grid>
 									</Border>
