--- a/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
@@ -37,21 +37,21 @@
 									  Command="{Binding MainWindowVM.NewChangeReports}"/>
 							<MenuItem Header="Удалить форму"
 									  Command="{Binding MainWindowVM.DeleteReports}"
-									  CommandParameter="{Binding MainWindowVM.SelectedReports}"/>
+									  CommandParameter="{Binding SelectedReports}"/>
 							<MenuItem Header="Выгрузить организацию"
 									  Command="{Binding MainWindowVM.ExportReports}"
-									  CommandParameter="{Binding MainWindowVM.SelectedReports}"/>
+									  CommandParameter="{Binding SelectedReports}"/>
 							<MenuItem Header="Выгрузить организацию с указанием диапазона дат"
 									  Command="{Binding MainWindowVM.ExportReportsWithDateRange}"
-									  CommandParameter="{Binding MainWindowVM.SelectedReports}"/>
+									  CommandParameter="{Binding SelectedReports}"/>
 							<MenuItem Header="Выгрузить все организации в один файл"
 									  Command="{Binding MainWindowVM.ExportAllReportsOneFile}"/>
 							<MenuItem Header="Выгрузить все организации в отдельные файлы"
 									  Command="{Binding MainWindowVM.ExportAllReports}"
-									  CommandParameter="{Binding MainWindowVM.SelectedReports}"/>
+									  CommandParameter="{Binding SelectedReports}"/>
 							<MenuItem Header="Проверить все формы организации"
 									  Command="{Binding MainWindowVM.ExcelExportCheckAllForms}"
-									  CommandParameter="{Binding MainWindowVM.SelectedReports}"/>
+									  CommandParameter="{Binding SelectedReports}"/>
 						</ContextMenu>
 					</DataGrid.ContextMenu>
 
