--- a/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
@@ -318,7 +318,7 @@
 				<Border Grid.Row="1" Classes="pageControlContainer">
 					<Grid
 						  RowDefinitions="Auto,Auto"
-						  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+						  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
 						<TextBlock Text="Текущая страница"
 							Grid.Row="0" Grid.Column="0" Margin="5"/>
 
@@ -345,6 +345,32 @@
 							Grid.Row="1" Grid.Column="4" Margin="5"/>
 						<TextBlock Text="{Binding NumFormInReport}"
 							Grid.Row="1" Grid.Column="5" Margin="5"/>
+
+						<StackPanel Grid.Row="0" Grid.RowSpan="2"
+									Grid.Column="6"
+									Margin="5,0,0,0"
+									Orientation="Horizontal">
+
+							<Button Content="1.1" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="1.1"/>
+							<Button Content="1.2" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="1.2"/>
+							<Button Content="1.3" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="1.3"/>
+							<Button Content="1.4" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="1.4"/>
+							<Button Content="1.5" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="1.5"/>
+							<Button Content="1.6" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="1.6"/>
+							<Button Content="1.7" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="1.7"/>
+							<Button Content="1.8" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="1.8"/>
+							<Button Content="1.9" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="1.9"/>
+						
+						</StackPanel>
 					</Grid>
 				</Border>
 			</Grid>
