--- a/Client_App/Views/MainWindowTabs/Forms2TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms2TabControl.axaml
@@ -314,7 +314,7 @@
 				<Border Grid.Row="1" Classes="pageControlContainer">
 					<Grid
 						  RowDefinitions="Auto,Auto"
-						  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+						  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
 						<TextBlock Text="Текущая страница"
 							Grid.Row="0" Grid.Column="0" Margin="5"/>
 
@@ -341,6 +341,38 @@
 							Grid.Row="1" Grid.Column="4" Margin="5"/>
 						<TextBlock Text="{Binding NumFormInReport}"
 							Grid.Row="1" Grid.Column="5" Margin="5"/>
+						
+						<StackPanel Grid.Row="0" Grid.RowSpan="2"
+									Grid.Column="6"
+									Margin="5,0,0,0"
+									Orientation="Horizontal">
+
+							<Button Content="2.1" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.1"/>
+							<Button Content="2.2" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.2"/>
+							<Button Content="2.3" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.3"/>
+							<Button Content="2.4" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.4"/>
+							<Button Content="2.5" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.5"/>
+							<Button Content="2.6" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.6"/>
+							<Button Content="2.7" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.7"/>
+							<Button Content="2.8" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.8"/>
+							<Button Content="2.9" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.9"/>
+							<Button Content="2.10" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.10"/>
+							<Button Content="2.11" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.11"/>
+							<Button Content="2.12" Width="35" Height="40" Margin="0,0,2,0"
+									Command="{Binding MainWindowVM.GoToFormNum}" CommandParameter="2.12"/>
+
+						</StackPanel>
 					</Grid>
 				</Border>
 			</Grid>
