--- a/Client_App/Views/MainWindowTabs/Forms4TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms4TabControl.axaml
@@ -144,7 +144,7 @@
 
 						<TextBlock Text="Кол-во отчетов:"
 							Grid.Row="1" Grid.Column="4" Margin="5"/>
-						<TextBlock Text="{Binding TotalForms}"
+						<TextBlock Text="{Binding TotalReportCount}"
 							Grid.Row="1" Grid.Column="5" Margin="5"/>
 					</Grid>
 				</Border>
@@ -290,7 +290,7 @@
 
 						<TextBlock Text="Кол-во строчек:"
 							Grid.Row="1" Grid.Column="4" Margin="5"/>
-						<TextBlock Text="{Binding NumFormInReport}"
+						<TextBlock Text="{Binding InSelectedReportFormsCount}"
 							Grid.Row="1" Grid.Column="5" Margin="5"/>
 					</Grid>
 				</Border>
